config/samples/side_v1alpha1_sidecar.yaml
apiVersion: side.sidecar.com/v1alpha1
kind: Sidecar
metadata:
  name: sidecar-sample
spec:
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: hello
            image: busybox
            args:
            - /bin/sh
            - -c
            - date; echo Hello from the Kubernetes cluster
          restartPolicy: OnFailure
